<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary_light"
    tools:context=".CadastroFragment">

    <ImageView
        android:id="@+id/logotipo"
        android:layout_width="wrap_content"
        android:layout_height="210dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nome_input"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:hint="@string/nome"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nome_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pais_input"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/pais"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/nome_input">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pais_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_check"

        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/pais_input" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirmarSenha"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_eye_pass"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/email_input" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/senha_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_confirm_input"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirmarSenha"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_eye_pass"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/password_input" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/senha2_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.button.MaterialButton
        android:id="@+id/criar_conta_button"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary_dark"
        android:text="@string/criar_conta"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="@id/password_confirm_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/temConta_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tem_conta"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/criar_conta_button" />






</androidx.constraintlayout.widget.ConstraintLayout>