<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="20dp"
            tools:ignore="UselessLeaf">

            <ImageView
                android:id="@+id/image_favorite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher_round"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/primary_dark"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/text_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_title"
                style="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp" />
            <ImageView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_queimada"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_localizacao"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/localizacao"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_check"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_fav">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/data_inicial"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/data_inicial"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_check"
                app:layout_constraintStart_toStartOf="@id/text_localizacao"
                app:layout_constraintTop_toBottomOf="@id/text_localizacao">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/data_final"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/data_final"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_check"
                app:layout_constraintEnd_toEndOf="@id/text_localizacao"
                app:layout_constraintTop_toBottomOf="@id/text_localizacao">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>