<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary_light"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/logotipo"
        android:layout_width="wrap_content"
        android:layout_height="210dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_check"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logotipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password_input"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_eye_pass"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/google_button"
        app:layout_constraintTop_toBottomOf="@id/login_input">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/google_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_google"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/facebook_button"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/facebook_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_facebook"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        app:layout_constraintStart_toEndOf="@id/google_button"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:backgroundTint="@color/secondary_dark"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/google_button"
        app:layout_constraintBottom_toTopOf="@id/newaccount_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/newaccount_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF603A"
        android:text="@string/nova_conta"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintBottom_toTopOf="@id/forgotpass_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/forgotpass_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recuperar_senha"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newaccount_button" />











</androidx.constraintlayout.widget.ConstraintLayout>